fix: cancel tabs z-index

--- a/packages/react/src/component/tabs/style.less
+++ b/packages/react/src/component/tabs/style.less
@@ -1,5 +1,4 @@
 .gm-tabs {
-
   .gm-tabs-head-fix {
     width: 100%;
     height: 40px;
@@ -25,17 +24,6 @@
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
 
-      &::before {
-        position: absolute;
-        width: 100%;
-        content: ' ';
-        height: 2px;
-        right: 0;
-        bottom: 0 !important;
-        z-index: 99;
-        background-color: #fff;
-      }
-
       &.active {
         background: white;
         border-left: 1px solid var(--gm-color-border);
@@ -57,9 +45,8 @@
   cursor: pointer;
   line-height: 28px;
   margin-left: 16px;
-  transition: all .3s cubic-bezier(.645, .045, .355, 1);
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
-
 
 .gm-tabs-text-overflow-ellipsis {
   max-width: 150px;
@@ -140,7 +127,6 @@
 
 // 可编辑风格样式
 .gm-tabs-edit {
-
   .gm-tabs-head {
     background: #fff !important;
     padding: 0;
@@ -157,7 +143,6 @@
       &.active {
         color: #1890ff;
         box-sizing: border-box;
-
       }
     }
   }
